# ex_pdfium

./: .gitignore  CHANGELOG.md  HANDOFF.md  PORTING.md  README.md  UPDATE_PROCEDURE.md  checksum-Elixir.ExPdfium.Native.exs  justfile  mix.exs
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-06-25-annotation-authoring-design.md  2026-06-25-document-creation-design.md  2026-06-25-write-tools-page-assembly-design.md  2026-06-26-text-repair-design.md  2026-06-26-text-repair-thai-pua.md
examples/: annotate.exs  assembly.exs  create.exs  document_info.exs  extract_text.exs  forms.exs  images.exs  open_and_count.exs  render_page.exs  structure.exs
lib/: ex_pdfium.ex
lib/ex_pdfium/: bitmap.ex  document.ex  native.ex  text.ex
lib/ex_pdfium/text/repair/: thai_pua.ex
native/ex_pdfium/: Cargo.toml
native/ex_pdfium/src/: lib.rs
scripts/: fetch-pdfium-dev.sh
test/: ex_pdfium_test.exs  test_helper.exs
test/ex_pdfium/: text_golden_test.exs  text_test.exs
test/ex_pdfium/text/repair/: thai_pua_test.exs
test/fixtures/: attachment_bomb_gen.py  forms_gen.py  images_gen.py  thai_pua.expected.txt
